FIX #1: Fix Chrome nav bar jump
Added javascript for locking down the sidebar to a fixed height on
mobile browsers.

--- a/_assets/css/_layout.scss
+++ b/_assets/css/_layout.scss
@@ -287,6 +287,11 @@ $top-to-sidebar-text: 20%;
   font-size: 24px;
 }
 
+.post-content {
+  max-width: 100%;
+  overflow: hidden;
+}
+
 
 
 /**
